2013-08-12  Yufeng Zhang  <Yufeng.Zhang@arm.com>

	* libc/sys/arm/crt0.S: Remove 'start'.

2013-08-08  Freddie Chopin  <freddie_chopin@op.pl>

	* libc/string/strncat.c: Fix typo in documentation.

2013-08-01  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/stdio_ext.h (__fbufsize): Define as inline function for
	gcc, as macro otherwise.
	(__freading): Ditto.
	(__fwriting): Ditto.
	(__freadable): Ditto.
	(__fwriteable): Ditto.
	(__flbf): Ditto.
	(__fpending): Ditto.

2013-07-23  Sahil Patnayakuni  <sahilp@rtems.org>

	* libc/sys/linux/include/netdb.h, libc/sys/linux/net/getaddrinfo.c,
	libc/sys/linux/net/getnameinfo.c: Add restrict keyword to getnameinfo()
	and getaddrinfo() to increase standards compliance and match glibc.

2013-07-23  Sahil Patnayakuni  <sahilp@rtems.org>

	* libc/include/string.h, libc/string/memccpy.c, libc/string/memcpy.c,
	libc/string/stpcpy.c, libc/string/stpncpy.c, libc/string/strcat.c,
	libc/string/strncat.c, libc/string/strncpy.c, libc/string/strtok.c,
	libc/string/strtok_r.c, libc/string/strxfrm.c
	libc/machine/microblaze/strcpy.c, libc/machine/xscale/memcpy.c,
	libc/machine/cris/memcpy.c: Add __restrict to prototype to
	increase standards compliance.

2013-07-18  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	* libc/sys/arm/syscalls.c (do_AngelSWI): Delete.
	* libc/sys/arm/libcfuncs.c (do_AngelSWI): Delete.
	* libc/sys/arm/swi.h: Copy over from libgloss.

2013-07-17  Janis Johnson  <janisjo@codesourcery.com>

	* libc/machine/powerpc/configure.in: Remove extra_sources; fix
	extra_objs for powerpc*-*altivec.
	* libc/machine/powerpc/Makefile.am: Define EXTRA_lib_a_SOURCES.
	* libc/machine/powerpc/configure: Regenerated.
	* libc/machine/powerpc/Makefile.in: Regenerated.

2013-07-16  David Holsgrove <david.holsgrove@xilinx.com>

	* configure.host: Change to microblaze*.
	* libc/include/machine/ieeefp.h: Add __MICROBLAZEEL__.
	* libc/machine/microblaze/mb_endian.h: New file.