@@ -1,3 +1,10 @@
+2013-08-12  Bin Cheng  <bin.cheng@arm.com>
+
+	* libc/configure.in (--enable-newlib-wchar-orient): Remove.
+	* libc/configure: Regenerated.
+	* libc/stdio/Makefile.am (NEWLIB_WIDE_ORIENT): Remove.
+	* libc/stdio/Makefile.in: Regenerated.
+
 2013-08-12  Yufeng Zhang  <Yufeng.Zhang@arm.com>
 
 	* libc/sys/arm/crt0.S: Remove 'start'.
